<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Switch
            android:id="@+id/check_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0"
            android:padding="10dp"
            android:splitTrack="false"
            android:text="@string/auto_check_updates"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <TextView
            android:id="@+id/package_curr_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="0"
            android:padding="10dp"
            android:text="@string/current_package"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <TextView
            android:id="@+id/package_latest_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:enabled="true"
            android:padding="10dp"
            android:text="@string/last_package_available"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <TextView
            android:id="@+id/textview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0"
            android:paddingLeft="10dp"
            android:text="@string/last_check"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textStyle="bold" />

    <TextView
        android:id="@+id/last_check_date_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:enabled="true"
        android:text="@string/last_check_value"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0">

        <Button
            android:id="@+id/button_check"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_weight="0"
            android:background="@android:color/holo_blue_dark"
            android:onClick="buttonclick"
            android:text="@string/button_check" />
    </RelativeLayout>

</LinearLayout>

